fix background image display on mobile

--- a/css/ndlr.less
+++ b/css/ndlr.less
@@ -15,6 +15,10 @@
 @import 'components/square.less';
 @import 'components/page.less';
 
+html {
+  min-height: 100%;
+}
+
 body {
   position: absolute;
   top: 0;
